# L3

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  LICENSE  README.md  START_HERE.md  agents_decode.json  build_and_run.sh  quick_build.sh
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: CMakeLists.txt  CONSOLIDATION_REPORT.md  README.md  STRUCTURE_OVERVIEW.txt
benchmarks/codec/: README.md  benchmark_kernel_only.cpp  benchmark_optimized.cpp  main_bench.cpp  sosd_bench_demo.cpp
benchmarks/ssb/: CMakeLists.txt  README.md
benchmarks/ssb/baseline/: q11.cu  q12.cu  q13.cu  q21.cu  q22.cu  q23.cu  q31.cu  q32.cu  q33.cu  q34.cu  q41.cu  q42.cu  q43.cu
benchmarks/ssb/optimized_2push/: l32.cu  q11_2push.cu  q11_l32.cu  q12_2push.cu  q12_l32.cu  q13_2push.cu  q13_l32.cu  q21_2push.cu  q21_l32.cu  q22_2push.cu  q22_l32.cu  q23_2push.cu  q23_l32.cu  q31_2push.cu  q31_l32.cu  q32_2push.cu  q32_l32.cu  q33_2push.cu  q33_l32.cu  q34_2push.cu  q34_l32.cu  q41_2push.cu  q41_l32.cu  q42_2push.cu  q42_l32.cu  q43_2push.cu  q43_l32.cu
examples/: CMakeLists.txt  README.md  basic_compression.cpp  horizontal_vs_vertical  horizontal_vs_vertical.cu
examples/cpp/: 01_partition_strategies.cpp
src/partitioner/: CMakeLists.txt  fixed_size_partitioner.cpp  variable_length_partitioner.cu
tests/ssb/: CMakeLists.txt  L32_compression.cuh  L3_alex_index.cuh  L3_predicate_pushdown.cuh  L3_ra_utils.cuh  debug_bounds.cu  debug_partition_pruning.cu  debug_partitions.cu  q11_2push.cu  q12_2push.cu  q13_2push.cu  q21_2push.cu  q22_2push.cu  q23_2push.cu  q31_2push.cu  q32_2push.cu  q33_2push.cu  q34_2push.cu  q41_2push.cu  q42_2push.cu  q43_2push.cu  run_full_benchmark.sh  ssb_L3_utils.cuh  ssb_utils.h
tests/ssb/code/: build_code.sh
tests/ssb/code/L3/: benchmark_detailed.cu  check_bw.cu  check_fresh.cu  check_offsets.cu  check_offsets_v15.cu  check_params_raw.cu  check_sizes.cu  debug_decode_v15.cu  debug_decoder.cu  q11_fused_v15.cu  q12_fused_v15.cu  q13_fused_v15.cu  q21_fused_v15.cu  q22_fused_v15.cu  q23_fused_v15.cu  q31_fused_v15.cu  q32_fused_v15.cu  q33_fused_v15.cu  q34_fused_v15.cu  q41_fused_v15.cu  q42_fused_v15.cu  q43_fused_v15.cu  v15_common.cuh  v15_padding.cuh  verify_decode.cu  verify_q2_decode.cu
tests/ssb/code/fls-gpu/: q11.cu  q12.cu  q13.cu  q1_unified.cu  q21.cu  q22.cu  q23.cu  q2_unified.cu  q31.cu  q32.cu  q33.cu  q34.cu  q3_unified.cu  q41.cu  q42.cu  q43.cu  q4_unified.cu
tests/ssb/code/gpu-bp/: q1_unified.cu  q2_unified.cu  q3_unified.cu  q4_unified.cu
tests/ssb/code/nvcomp/: q11.cu  q12.cu  q13.cu  q1_unified.cu  q21.cu  q22.cu  q23.cu  q2_unified.cu  q31.cu  q32.cu  q33.cu  q34.cu  q3_unified.cu  q41.cu  q42.cu  q43.cu  q4_unified.cu
tests/ssb/code/planner/: q1_unified.cu  q2_unified.cu  q3_unified.cu  q4_unified.cu
tests/ssb/code/tile-gpu/: q11.cu  q12.cu  q13.cu  q1_unified.cu  q21.cu  q22.cu  q23.cu  q2_unified.cu  q31.cu  q32.cu  q33.cu  q34.cu  q3_unified.cu  q41.cu  q42.cu  q43.cu  q4_unified.cu
tests/ssb/common/: sorted_random_access.cuh  ssb_data_loader.hpp
tests/ssb/decompress_first/: q11.cu  q12.cu  q13.cu  q21.cu  q22.cu  q23.cu  q31.cu  q32.cu  q33.cu  q34.cu  q41.cu  q42.cu  q43.cu
tests/ssb/fused_query/: q11.cu  q12.cu  q13.cu  q21.cu  q22.cu  q23.cu  q31.cu  q32.cu  q33.cu  q34.cu  q41.cu  q42.cu  q43.cu
tests/ssb/fused_query_new/: CMakeLists.txt  q11.cu  q11_fls.cu  q12_fls.cu  q13_fls.cu  q21_fls.cu  q22_fls.cu  q23_fls.cu  q31_fls.cu  q32_fls.cu  q33_fls.cu  q34_fls.cu  q41_fls.cu  q42_fls.cu  q43_fls.cu
tests/ssb/fused_query_new/common/: crystal_ssb.cuh  fls_block_load.cuh  l3_block_load.cuh  perfect_hash_table.cuh
tests/ssb/optimized/: q11_optimized.cu  q12_optimized.cu  q13_optimized.cu  q21_optimized.cu  q22_optimized.cu  q23_optimized.cu  q31_optimized.cu  q32_optimized.cu  q33_optimized.cu  q34_optimized.cu  q41_optimized.cu  q41_ultra.cu  q42_optimized.cu  q43_optimized.cu
tests/ssb/predicate_pushdown/: q11.cu  q12.cu  q13.cu  q21.cu  q22.cu  q23.cu  q31.cu  q32.cu  q33.cu  q34.cu  q41.cu  q42.cu  q43.cu
tests/ssb/random_access/: q11.cu  q12.cu  q13.cu  q21.cu  q22.cu  q23.cu  q31.cu  q32.cu  q33.cu  q34.cu  q41.cu  q42.cu  q43.cu
tests/ssb_ultra/fused_decompression/: CMakeLists.txt  fused_decompress_tile.cuh  fused_decompress_tile_float.cuh  fused_hash_table.cuh  fused_kernel_common.cuh  l3_decompress_device.cuh  prefetch_helpers_v5.cuh  q11_fused_optimized.cu  q11_fused_v2.cu  q11_fused_v3.cu  q11_fused_v4.cu  q11_fused_v5.cu  q11_true_fused.cu  q11_true_fused_float.cu  q12_fused_v5.cu  q12_true_fused.cu  q13_fused_v5.cu  q13_true_fused.cu  q21_fused_v5.cu  q21_true_fused.cu  q22_fused_v5.cu  q22_true_fused.cu  q23_fused_v5.cu  q23_true_fused.cu  q31_fused_v5.cu  q31_true_fused.cu  q32_fused_v5.cu  q32_true_fused.cu  q33_fused_v5.cu  q33_true_fused.cu  q34_fused_v5.cu  q34_true_fused.cu  q41_fused_v5.cu  q41_true_fused.cu  q42_fused_v5.cu  q42_true_fused.cu  q43_fused_v5.cu  q43_true_fused.cu  tile_metadata.cuh  unpack_specialized.cuh  (+1 more)
tests/ssb_ultra/fused_decompression/v10/: compression_benchmark.cu  compression_performance_report.md  cost_optimal_comparison_report.md  q11_fused_v10.cu  q12_fused_v10.cu  q13_fused_v10.cu  q21_fused_v10.cu  q22_fused_v10.cu  q23_fused_v10.cu  q31_fused_v10.cu  q32_fused_v10.cu  q33_fused_v10.cu  q34_fused_v10.cu  q41_fused_v10.cu  q42_fused_v10.cu  q43_fused_v10.cu  tunable_parameters.md
tests/ssb_ultra/fused_decompression/v6/: prefetch_hash_v6.cuh  q21_fused_v6.cu  shared_hash_tables_v6.cuh
tests/ssb_ultra/fused_decompression/v7/: crystal_hash_build_v7.cuh  crystal_hash_v7.cuh  q21_fused_v7.cu  q31_fused_v7.cu  q41_fused_v7.cu
tests/ssb_ultra/fused_decompression/v8/: hierarchical_agg_v8.cuh  q21_fused_v8.cu  q21_fused_v8b.cu
tests/ssb_ultra/optimized/: CMakeLists.txt  fused_decompress_probe.cuh  q11_optimized.cu  q12_optimized.cu  q13_optimized.cu  q21_optimized.cu  q22_optimized.cu  q23_optimized.cu  q31_optimized.cu  q32_optimized.cu  q33_optimized.cu  q34_optimized.cu  q41_optimized.cu  q41_ultra.cu  q42_optimized.cu  q43_optimized.cu
(+381 files in other folders)
